tests/neg/i9751.scala
// scalac: -Xfatal-warnings

def f(): Unit = {
  () // error
  ()
}

inline def g(): Unit = {
  () // error
  ()
}
